# PTMCMCSampler

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  PTMCMCSampler.html  README.md  RELEASE.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py
.github/workflows/: ci_test.yml
PTMCMCSampler/: PTMCMCSampler.py  __init__.py  dictutils.py  model.py  nompi4py.py  nutsjump.py
PTMCMCSampler/backends/: __init__.py  ascii.py  default.py
PTMCMCSampler/proposals/: AdaptiveMetropolis.py  DifferentialEvolutionProposal.py  JumpCycle.py  MetropolisHastings.py  SingleAdaptiveGaussian.py  __init__.py  am.py  cycle.py  de.py  mh.py  single.py
PTMCMCSampler/samplers/: __init__.py  base.py
_modules/: PTMCMCSampler.html  index.html
_sources/: PTMCMCSampler.txt
doc/: Makefile
docs/: Makefile  conf.py  index.rst  make_gh-pages.sh
docs/source/: make.bat
examples/: curved_likelihood.ipynb  gaussian_likelihood.ipynb  gaussian_mpi_example.py  simple.ipynb  simple.py
tests/: simple.py  test_mpi.py  test_nuts.py  test_simple.py
